--- a/src/app/components/custom-cake/custom-cake.component.html
+++ b/src/app/components/custom-cake/custom-cake.component.html
@@ -1,17 +1,17 @@
 <div class="w-full container mx-auto px-8 lg:px-24 my-12">
     <p class="capitalize text-sm lg:text-lg font-bold text-primary my-4">Custom Cake</p>
-    <div class="w-3/4 mx-auto mt-16">
+    <div class="w-full lg:w-3/4 mx-auto mt-16">
         <form>
-            <div class="grid grid-cols-2 w-full gap-6 mt-4">
-                <div class="flex flex-col w-full">
+            <div class="lg:grid grid-cols-2 w-full gap-6 mt-4">
+                <div class="flex flex-col w-full my-4 lg:my-0">
                     <label for="username" class="text-start">Your Name <span class="text-red-500">*</span></label>
                     <input class="w-full border-2 outline-none rounded-md px-4 py-2 mt-2" type="text" placeholder="Your Full Name" required />
                 </div>
-                <div class="flex flex-col w-full">
+                <div class="flex flex-col w-full my-4 lg:my-0">
                     <label for="phone-number" class="text-start">Phone Number <span class="text-red-500">*</span></label>
                     <input class="w-full border-2 outline-none rounded-md px-4 py-2 mt-2" type="number" placeholder="Your Phone Number" required />
                 </div>
-                <div class="flex flex-col w-full">
+                <div class="flex flex-col w-full my-4 lg:my-0">
                     <label for="category" class="text-start">Category Cake <span class="text-red-500">*</span></label>
                     <select class="border-2 outline-none w-full rounded-md px-4 py-2 mt-2" style="appearance: none;" required>
                         <option disabled selected>Select Category Cake</option>
@@ -19,18 +19,15 @@
                         <option value="orther">Orther Request</option>
                     </select>
                 </div>
-                <div class="flex flex-col w-full">
+                <div class="flex flex-col w-full my-4 lg:my-0">
                     <label for="orther-request" class="text-start text-slate-400">Orther Request</label>
                     <input class="w-full border-2 outline-none rounded-md px-4 py-2 mt-2" readonly />
                 </div>
-                <div class="col-span-2 w-full flex flex-col">
+                <div class="col-span-2 w-full flex flex-col my-4 lg:my-0">
                     <label for="description" class="text-start">Description Cake <span class="text-red-500">*</span></label>
                     <textarea class="border-2 outline-none rounded-md px-4 py-2 mt-2 h-36" required></textarea>
                 </div>
-                <div class="col-span-2 w-1/3 mx-auto">
-                    <!-- <button class="border-2 rounded-full p-2 border-primary mt-4">
-                        <p class="uppercase bg-primary rounded-full font-bold text-white py-2 lg:py-4 px-6 lg:px-8 text-xs">Order Now</p>
-                    </button> -->
+                <div class="col-span-2 w-3/4 lg:w-1/3 mx-auto my-0 lg:my-0">
                     <button class="border-2 rounded-full p-2 border-primary">
                         <p class="uppcase bg-primary rounded-full text-white py-2 lg:py-4 px-6 lg:px-8 text-xs">Send Request Category Cake</p>
                     </button>
