--- a/src/app/components/weading-cake/weading-cake.component.html
+++ b/src/app/components/weading-cake/weading-cake.component.html
@@ -1,85 +1,85 @@
 <div class="w-full container mx-auto px-8 lg:px-24 my-12">
-    <div class="w-full grid grid-cols-2 gap-4">
-        <div class="w-full flex justify-start items-center">
-            <div class="w-1/4">
+    <div class="w-full lg:grid grid-cols-2 gap-4">
+        <div class="w-full flex justify-start items-center my-4 lg:my-0">
+            <div class="w-1/3 lg:w-1/4">
                 <img src="https://images.unsplash.com/photo-1588195538326-c5b1e9f80a1b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
-            <div class="w-3/4 bg-secondary h-full p-4">
+            <div class="lg:w-3/4 w-2/3 bg-secondary h-full p-4">
                 <div class="border-[3px] border-white h-full flex justify-start items-center p-4">
                     <div >
-                        <h1 class="uppercase text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
-                        <p class="text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
+                        <h1 class="uppercase text-sm lg:text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
+                        <p class="text-xs lg:text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="w-full flex justify-start items-center">
-            <div class="w-1/4">
+        <div class="w-full flex justify-start items-center my-4 lg:my-0">
+            <div class="w-1/3 lg:w-1/4">
                 <img src="https://images.unsplash.com/photo-1588195538326-c5b1e9f80a1b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
-            <div class="w-3/4 bg-secondary h-full p-4">
+            <div class="lg:w-3/4 w-2/3 bg-secondary h-full p-4">
                 <div class="border-[3px] border-white h-full flex justify-start items-center p-4">
                     <div >
-                        <h1 class="uppercase text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
-                        <p class="text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
+                        <h1 class="uppercase text-sm lg:text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
+                        <p class="text-xs lg:text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="w-full flex justify-start items-center">
-            <div class="w-1/4">
+        <div class="w-full flex justify-start items-center my-4 lg:my-0">
+            <div class="w-1/3 lg:w-1/4">
                 <img src="https://images.unsplash.com/photo-1588195538326-c5b1e9f80a1b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
-            <div class="w-3/4 bg-secondary h-full p-4">
+            <div class="lg:w-3/4 w-2/3 bg-secondary h-full p-4">
                 <div class="border-[3px] border-white h-full flex justify-start items-center p-4">
                     <div >
-                        <h1 class="uppercase text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
-                        <p class="text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
+                        <h1 class="uppercase text-sm lg:text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
+                        <p class="text-xs lg:text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="w-full flex justify-start items-center">
-            <div class="w-1/4">
+        <div class="w-full flex justify-start items-center my-4 lg:my-0">
+            <div class="w-1/3 lg:w-1/4">
                 <img src="https://images.unsplash.com/photo-1588195538326-c5b1e9f80a1b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
-            <div class="w-3/4 bg-secondary h-full p-4">
+            <div class="lg:w-3/4 w-2/3 bg-secondary h-full p-4">
                 <div class="border-[3px] border-white h-full flex justify-start items-center p-4">
                     <div >
-                        <h1 class="uppercase text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
-                        <p class="text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
+                        <h1 class="uppercase text-sm lg:text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
+                        <p class="text-xs lg:text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="w-full flex justify-start items-center">
-            <div class="w-1/4">
+        <div class="w-full flex justify-start items-center my-4 lg:my-0">
+            <div class="w-1/3 lg:w-1/4">
                 <img src="https://images.unsplash.com/photo-1588195538326-c5b1e9f80a1b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
-            <div class="w-3/4 bg-secondary h-full p-4">
+            <div class="lg:w-3/4 w-2/3 bg-secondary h-full p-4">
                 <div class="border-[3px] border-white h-full flex justify-start items-center p-4">
                     <div >
-                        <h1 class="uppercase text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
-                        <p class="text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
+                        <h1 class="uppercase text-sm lg:text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
+                        <p class="text-xs lg:text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="w-full flex justify-start items-center">
-            <div class="w-1/4">
+        <div class="w-full flex justify-start items-center my-4 lg:my-0">
+            <div class="w-1/3 lg:w-1/4">
                 <img src="https://images.unsplash.com/photo-1588195538326-c5b1e9f80a1b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
-            <div class="w-3/4 bg-secondary h-full p-4">
+            <div class="lg:w-3/4 w-2/3 bg-secondary h-full p-4">
                 <div class="border-[3px] border-white h-full flex justify-start items-center p-4">
                     <div >
-                        <h1 class="uppercase text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
-                        <p class="text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
+                        <h1 class="uppercase text-sm lg:text-xl font-bold text-start">Weading CAKE sPECIAL</h1>
+                        <p class="text-xs lg:text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
                     </div>
                 </div>
             </div>
